# nitransforms

./: .codecov.yml  .coveragerc  .dockerignore  .gitignore  .mailmap  .pep8speaks.yml  .readthedocs.yaml  .travis.yml  .zenodo.json  CHANGES.rst  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  Dockerfile  LICENSE  MANIFEST.in  README.md  commandline_for_tests.txt  env.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: CONTRIBUTING.md  pythonpackage.yml  tox.yml  travis.yml
docker/files/: fs-cert.pem
docs/: Makefile  api.rst  changes.rst  conf.py  examples.rst  index.rst  installation.rst  requirements.txt
docs/_api/: base.rst  interp.rst  io.rst  linear.rst  manip.rst  nonlinear.rst  patched.rst  surface.rst
docs/notebooks/: 01_preparing_images.ipynb  02_afni_deoblique.ipynb  Reading and Writing transforms.ipynb  Visualizing transforms.ipynb
joss/: nt.bib  paper.md
nitransforms/: __init__.py  base.py  cli.py  conftest.py  draft_dsm.py  draft_grid.py  io.py  linear.py  manip.py  nonlinear.py  patched.py  resampling.py  surface.py  vis.py  vis_v1.py  vis_v2.py  vis_v4.py  vis_v5.py  vis_v6.py
nitransforms/analysis/: utils.py
nitransforms/interp/: bspline.py
nitransforms/io/: __init__.py  afni.py  base.py  fsl.py  itk.py  lta.py  x5.py
nitransforms/tests/: conftest.py  test_affines.py  test_analysis.py  test_base.py  test_cli.py  test_conversions.py  test_io.py  test_io_itk.py  test_linear.py  test_manip.py  test_nonlinear.py  test_resampling.py  test_surface.py  test_transform.py  test_version.py  test_vis.py  test_x5.py  utils.py
nitransforms/tests/data/: affine-LAS-itk.tfm  affine-LAS.afni  affine-LAS.afni-array  affine-LAS.fs.lta  affine-LAS.fsl  affine-LAS.itk.tfm  affine-LPS-itk.tfm  affine-LPS.afni  affine-LPS.fs.lta  affine-LPS.fsl  affine-LPS.itk.tfm  affine-RAS.afni-array  affine-RAS.fs.lta  affine-RAS.fs.v2v.lta  affine-RAS.fsl  affine-antsComposite.h5  affine-oblique-catmatvec.afni  affine-oblique-catmatvec2.afni  affine-oblique.afni  affine-oblique.fs.lta  affine-oblique.fsl  bold-to-t1w.lta  bold-to-t1w.v2v.lta  ds-005_sub-01_from-T1_to-OASIS_affine.mat  ds-005_sub-01_from-T1w_to-MNI152NLin2009cAsym_mode-image_xfm.h5  hmc-itk.tfm  inv.lta  itktflist.tfm  itktflist2.tfm  r2r.lta  v2v.lta
nitransforms/tests/data/regressions/: bbregister.lta  bbregister.tfm  from-fsnative_to-bold_mode-image.fsl  from-fsnative_to-bold_mode-image.lta  from-fsnative_to-bold_mode-image.tfm  from-fsnative_to-bold_mode-image_type-ras2ras.lta  from-fsnative_to-scanner_mode-image.fsl  from-scanner_to-bold_mode-image.fsl  from-scanner_to-bold_mode-image.lta  from-scanner_to-bold_mode-image.tfm  from-scanner_to-bold_mode-image_type-ras2ras.lta  from-scanner_to-fsnative_mode-image.fsl  from-scanner_to-fsnative_mode-image.lta  from-scanner_to-fsnative_mode-image.tfm  robust_register.lta  robust_register.tfm
nitransforms/vis/: draft-dft-plots.py  plot-BSplineFieldTransform.py  plot-DenseFieldTransform.py
nitransforms/vis_drafts/: vis_v2.py  vis_v3.py  vis_v4.py  vis_v5.py
