[metadata]
provides =
    nitransforms

[options]
python_requires = >= 3.5
install_requires =
    numpy
    scipy
    nibabel >= 3.0
    h5py
test_requires =
    pytest
    pytest-cov
    nose
    codecov
packages = find:
include_package_data = True

[options.extras_require]
test =
    pytest
    pytest-cov
    nose
    codecov
tests =
    %(test)s
all =
    %(test)s

[options.entry_points]
console_scripts =
    nb-transform = nitransforms.cli:main

[flake8]
max-line-length = 99
doctests = False
ignore =
    E266
    W503
exclude=*build/
per-file-ignores =
    **/__init__.py : F401
    docs/conf.py : E265

[tool:pytest]
norecursedirs = .git
addopts = -svx --doctest-modules
doctest_optionflags = ALLOW_UNICODE NORMALIZE_WHITESPACE ELLIPSIS
env =
    PYTHONHASHSEED=0
filterwarnings =
    ignore::DeprecationWarning
junit_family=xunit2
