[metadata]
author = The NiPreps developers
author_email = nipreps@gmail.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description = NiTransforms -- Neuroimaging spatial transforms in Python.
license = MIT License
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
provides = nitransforms
project_urls =
    Manuscript=https://doi.org/10.31219/osf.io/8aq7b
    NiBabel=https://github.com/nipy/nibabel/pull/656
url = https://github.com/poldracklab/nitransforms

[options]
python_requires = >= 3.7
install_requires =
    numpy
    scipy
    nibabel >= 3.0
    h5py
test_requires =
    pytest
    pytest-cov
    nose
    codecov
setup_requires =
    setuptools_scm
    toml
packages = find:
include_package_data = True

[options.extras_require]
test =
    pytest
    pytest-cov
    codecov
tests =
    %(test)s
all =
    %(test)s

[options.entry_points]
console_scripts =
    nb-transform = nitransforms.cli:main

[flake8]
max-line-length = 99
doctests = False
ignore =
    E266
    W503

[tool:pytest]
norecursedirs = .git
addopts = -svx --doctest-modules
doctest_optionflags = ALLOW_UNICODE NORMALIZE_WHITESPACE ELLIPSIS
env =
    PYTHONHASHSEED=0
filterwarnings =
    ignore::DeprecationWarning
junit_family=xunit2
