[metadata]
author = The NiPy developers
author_email = nipreps@gmail.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
description = NiTransforms -- Neuroimaging spatial transforms in Python.
license = MIT License
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
provides = nitransforms
project_urls =
    Manuscript=https://doi.org/10.31219/osf.io/8aq7b
    NiBabel=https://github.com/nipy/nibabel/pull/656
url = https://github.com/nipy/nitransforms

[options]
python_requires = >= 3.8
install_requires =
    numpy >= 1.21.0
    scipy >= 1.6.0
    nibabel >= 3.0
    h5py
test_requires =
    pytest
    pytest-cov
    pytest-env
    nose
    codecov
setup_requires =
    setuptools_scm
    toml
packages = find:
include_package_data = True

[options.extras_require]
niftiext =
    lxml
niftiexts =
    %(niftiext)s
test =
    pytest
    pytest-cov
    pytest-env
    codecov
tests =
    %(test)s

all =
    %(niftiext)s
    %(test)s

[options.entry_points]
console_scripts =
    nb-transform = nitransforms.cli:main

[flake8]
max-line-length = 99
doctests = False
ignore =
    E266
    E231
    W503

[tool:pytest]
norecursedirs = .git
addopts = -svx --doctest-modules
doctest_optionflags = ALLOW_UNICODE NORMALIZE_WHITESPACE ELLIPSIS
env =
    PYTHONHASHSEED=0
filterwarnings =
    ignore::DeprecationWarning
junit_family=xunit2
